--- a/heart.html
+++ b/heart.html
@@ -63,7 +63,7 @@
 <h1>My Heart Belongs To You ❤️</h1>
 
 <div class="heart">
-    <img src="photo1.jpg" class="img1">
+    <img src="Private/photo1.jpeg" class="img1">
     <img src="photo2.jpg" class="img2">
     <img src="photo3.jpg" class="img3">
     <img src="photo4.jpg" class="img4">
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
